fix date alignment

--- a/cal.css
+++ b/cal.css
@@ -4,10 +4,10 @@
 }
 
 day {
-    border: solid 1px black;
+    border-bottom: solid 1px black;
     display: grid;
     font-family: 'isosevcal', monospace;
-    grid-template-columns: 11ch 1fr;
+    grid-template-columns: 12ch 1fr;
 }
 
 date, time {
